@@ -1,0 +1,90 @@
+begin_unit|revision:0.9.5;language:Java;cregit-version:0.0.1
+begin_comment
+comment|/**  * Copyright 2006 The Apache Software Foundation  *  * Licensed under the Apache License, Version 2.0 (the "License");  * you may not use this file except in compliance with the License.  * You may obtain a copy of the License at  *  *     http://www.apache.org/licenses/LICENSE-2.0  *  * Unless required by applicable law or agreed to in writing, software  * distributed under the License is distributed on an "AS IS" BASIS,  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  * See the License for the specific language governing permissions and  * limitations under the License.  */
+end_comment
+
+begin_package
+DECL|package|org.apache.solr.analysis
+package|package
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|analysis
+package|;
+end_package
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|analysis
+operator|.
+name|TokenStream
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|analysis
+operator|.
+name|KeywordTokenizer
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|io
+operator|.
+name|Reader
+import|;
+end_import
+
+begin_comment
+comment|/**  * @version $Id: LowerCaseTokenizerFactory.java 382610 2006-03-03 01:43:03Z yonik $  */
+end_comment
+
+begin_class
+DECL|class|KeywordTokenizerFactory
+specifier|public
+class|class
+name|KeywordTokenizerFactory
+extends|extends
+name|BaseTokenizerFactory
+block|{
+DECL|method|create
+specifier|public
+name|TokenStream
+name|create
+parameter_list|(
+name|Reader
+name|input
+parameter_list|)
+block|{
+return|return
+operator|new
+name|KeywordTokenizer
+argument_list|(
+name|input
+argument_list|)
+return|;
+block|}
+block|}
+end_class
+
+end_unit
+
